--- a/zepto.fullpage/demo_js/landscape.html
+++ b/zepto.fullpage/demo_js/landscape.html
@@ -75,6 +75,7 @@
     <script>
         document.getElementsByClassName('wp-inner')[0].fullpage({
             orientationchange: function(e) {
+                alert(e)
                 if (e === 'landscape') {
                     $('.landscape').show();
                 } else {
