--- a/zepto.fullpage/demo_js/landscape.html
+++ b/zepto.fullpage/demo_js/landscape.html
@@ -79,6 +79,7 @@
                 if (e === 'landscape') {
                     $('.landscape').show();
                 } else {
+                    console.log(1111)
                     $('.landscape').hide();
                 }
             }
