--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>使用animate.css</title>
+    <title>摩室</title>
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/zepto.fullpage.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -12,10 +13,19 @@
 <body>
     <div class="wp">
         <div class="wp-inner">
-            <div class="page page1">
-                <div class="js-animate animated" data-animate="bounce" data-time="0">bounce</div>
-                <div class="js-animate animated" data-animate="bounce" data-time="1500">bounce</div>
-                <div class="js-animate animated" data-animate="bounce" data-time="3000">bounce</div>
+            <div class="page page1 text-center">
+                <div class="header">
+                    <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="bounce" data-time="0">
+                </div>
+                <div class="js-animate animated first-img" data-animate="bounce" data-time="0">
+                    <img src="images/img/room.png" alt="" class="room-pig">
+                </div>
+                <div class="js-animate animated" data-animate="bounce" data-time="1500">
+                    <span class="first-name">摩室移动智能卫生间</span>
+                </div>
+                <p class="first-Ename js-animate animated" data-animate="bounce" data-time="3000">PORTABLE SMART TOILET</p>
+                <h5 class="first-tit js-animate animated"  data-animate="bounce" data-time="4500">方便你我 智享生活</h5>
+                <a href="##" class="btn js-animate animated"  data-animate="bounce" data-time="5500">立即使用摩室</a>
             </div>
             <div class="page page2">
                 <div class="js-animate animated" data-animate="bounceIn" data-time="0">bounceIn</div>
@@ -31,6 +41,7 @@
                 <div class="js-animate animated" data-animate="rollIn" data-time="0">rollIn</div>
                 <div class="js-animate animated" data-animate="rollIn" data-time="1500">rollIn</div>
                 <div class="js-animate animated" data-animate="rollIn" data-time="3000">rollIn</div>
+                
             </div>
         </div>
     </div>
@@ -39,7 +50,7 @@
         <img src="images/icon/landscape.png" height="194" width="128">
         <p>为了更好的体验，请将手机/平板竖过来</p>
     </div>
-    <!-- <script src="js/rem.js"></script> -->
+    <script src="js/rem.js"></script>
     <script src="js/zepto.js"></script>
     <script src="js/zepto.fullpage.js"></script>
     <script>
