--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -28,9 +28,30 @@
                 <a href="##" class="btn js-animate animated"  data-animate="bounce" data-time="5500">立即使用摩室</a>
             </div>
             <div class="page page2">
-                <div class="js-animate animated" data-animate="bounceIn" data-time="0">bounceIn</div>
-                <div class="js-animate animated" data-animate="bounceIn" data-time="1500">bounceIn</div>
-                <div class="js-animate animated" data-animate="bounceIn" data-time="3000">bounceIn</div>
+                <div class="js-animate animated second-img" data-animate="bounceIn" data-time="0">
+                    <img src="images/banner/1.jpg" alt="">
+                    <div class="second">
+                        <h2>新闻标题</h2>
+                        <p class="times">20180901</p>
+                        <p class="details">新闻内容新闻内容新闻内容</p>
+                    </div>
+                </div>
+                <div class="js-animate animated second-img" data-animate="bounceIn" data-time="1500">
+                    <img src="images/banner/2.jpg" alt="">
+                    <div class="second">
+                        <h2>新闻标题</h2>
+                        <p class="times">20180901</p>
+                        <p class="details">新闻内容新闻内容新闻内容</p>
+                    </div>
+                </div>
+                <div class="js-animate animated second-img" data-animate="bounceIn" data-time="3000">
+                    <img src="images/banner/3.jpg" alt="">
+                    <div class="second">
+                        <h2>新闻标题</h2>
+                        <p class="times">20180901</p>
+                        <p class="details">新闻内容新闻内容新闻内容</p>
+                    </div>
+                </div>
             </div>
             <div class="page page3">
                 <div class="js-animate animated" data-animate="fadeInLeft" data-time="0">fadeInLeft</div>
