--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page page3">
+            <div class="page page3 item">
                 <div class="js-animate animated img-box text-center" data-animate="bounce" data-time="0">
                     <img src="images/img/phone.png" alt="" class="room-pig">
                 </div>
@@ -65,15 +65,41 @@
                 </h5>
                 <p class="js-animate animated" data-animate="fadeInLeft" data-time="4500">摩室移动智能卫生间为市民在城市公共区域提供7*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
             </div>
-            <div class="page page4">
-                <div class="js-animate animated" data-animate="rollIn" data-time="0">rollIn</div>
-                <div class="js-animate animated" data-animate="rollIn" data-time="1500">rollIn</div>
-                <div class="js-animate animated" data-animate="rollIn" data-time="3000">rollIn</div>
+            <div class="page page4 item">
+                <div class="js-animate animated four-img text-center" data-animate="bounce" data-time="0">
+                    <img src="images/img/solar_energy.png" alt="" class="room-pig">
+                </div>
+                <div class="js-animate animated" data-animate="fadeInLeft" data-time="1500">
+                    <p class="tit">更节能</p>
+                </div>
+                <h5 class="js-animate animated title" data-animate="fadeInLeft" data-time="3000">
+                    为城市低碳环保节能减排助力，建设干净城市。
+                </h5>
+                <p class="js-animate animated" data-animate="fadeInLeft" data-time="4500">摩室移动智能卫生间所有的设备都使用太阳能供电，我们希望建造一个更加低碳节能的城市公共服务设施。</p>
             </div>
-            <div class="page page5">
-                <div class="js-animate animated" data-animate="rollIn" data-time="0">rollIn</div>
-                <div class="js-animate animated" data-animate="rollIn" data-time="1500">rollIn</div>
-                <div class="js-animate animated" data-animate="rollIn" data-time="3000">rollIn</div>
+            <div class="page page5 item">
+                <div class="js-animate animated img-box text-center" data-animate="rollIn" data-time="0">
+                    <img src="images/img/machine.png" alt="" class="room-pig">
+                </div>
+                <div class="js-animate animated" data-animate="rollIn" data-time="1500">
+                    <p class="tit">易购买</p>
+                </div>
+                <h5 class="js-animate animated title" data-animate="rollIn" data-time="3000">
+                    为用户提供更多的应急用品，解决更多的紧急需求。
+                </h5>
+                <p class="js-animate animated" data-animate="fadeInLeft" data-time="4500">摩室移动智能卫生间的小型自动售卖机为用户提供了更加便捷的应急用品购买服务，例如：纸巾、湿巾、卫生巾、一次性雨衣等等。我们不仅仅解决你的一个问题，更想帮助你解决更多的应急需求。*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
+            </div>
+            <div class="page page6 item">
+                <div class="js-animate animated four-img text-center" data-animate="bounce" data-time="0">
+                    <img src="images/img/loop.png" alt="" class="room-pig">
+                </div>
+                <div class="js-animate animated" data-animate="fadeInLeft" data-time="1500">
+                    <p class="tit">更环保</p>
+                </div>
+                <h5 class="js-animate animated title" data-animate="fadeInLeft" data-time="3000">
+                    为农业提供更多的有机肥料选择。
+                </h5>
+                <p class="js-animate animated" data-animate="fadeInLeft" data-time="4500">摩室科技的目标不只是为大家提供一个方便干净的如厕地点，更致力于打造一个全新的排泄物资源使用闭环，做到真正的废物再利用。</p>
             </div>
         </div>
     </div>
