--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -13,6 +13,15 @@
 <body>
     <div class="wp">
         <div class="wp-inner">
+            <div class="page page7 text-center">
+                <img src="images/img/sina.png" class="icon-top" alt="">  
+                <div class="contact">
+                   <img src="images/img/wechat.png" alt="">  
+                </div>
+                <p class="phone">4008-861-921</p>
+                <p class="word-times">工作日 早10:00-晚8:00</p>
+                <p class="number">京ICP备17063363号-1 北京摩室科技有限公司</p>
+            </div>
             <div class="page page1 text-center">
                 <div class="header">
                     <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="bounce" data-time="0">
@@ -101,6 +110,7 @@
                 </h5>
                 <p class="js-animate animated" data-animate="fadeInLeft" data-time="4500">摩室科技的目标不只是为大家提供一个方便干净的如厕地点，更致力于打造一个全新的排泄物资源使用闭环，做到真正的废物再利用。</p>
             </div>
+
         </div>
     </div>
     <span class="start"><b></b></span>
@@ -112,7 +122,7 @@
     <script src="js/zepto.js"></script>
     <script src="js/zepto.fullpage.js"></script>
     <script>
-        let windowH = $(window).height() - 60,
+        let windowH = $(window).height() - 40,
             imgH = windowH / 3;
         $('.second-img').height(imgH);
         $('.wp-inner').fullpage({
