--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -13,7 +13,23 @@
 <body>
     <div class="wp">
         <div class="wp-inner">
-            
+            <div class="nav">
+                <button type="button" class="navbar-toggle nav-btn" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>    
+                </button>
+            </div>
+            <div class="nav-box">
+                <i class="closed-btn">x</i>
+                <ul class="navbar-nav navbar-right" style="">
+                    <li class="active"><a href="#">产品</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">城市</a></li>
+                    <li><a href="#">新闻</a></li>
+                    <li><a href="#">广告合作</a></li>
+                </ul>
+            </div>
             <div class="page page1 text-center">
                 <div class="header">
                     <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
@@ -126,6 +142,12 @@
         let windowH = $(window).height() - 40,
             imgH = windowH / 3;
         $('.second-img').height(imgH);
+        $(".nav-btn").click(function(event) {
+            $(".nav-box").show();
+        });
+        $(".closed-btn").click(function(event) {
+            $(".nav-box").hide();
+        });
         $('.wp-inner').fullpage({
             change: function (e) {
                 // 移除动画属性
