--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -34,18 +34,18 @@
                 <div class="header">
                     <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
                 </div>
-                <div class="js-animate animated first-img" data-animate="zoomIn" data-time="600">
+                <div class="js-animate animated first-img" data-animate="zoomIn" data-time="300">
                     <img src="images/img/room.png" alt="" class="room-pig">
                 </div>
-                <div class="js-animate animated" data-animate="bounce" data-time="1200">
+                <div class="js-animate animated" data-animate="fadeInDown" data-time="600">
                     <span class="first-name">摩室移动智能卫生间</span>
                 </div>
-                <p class="first-Ename js-animate animated" data-animate="bounce" data-time="2000">PORTABLE SMART TOILET</p>
-                <h5 class="first-tit js-animate animated"  data-animate="bounce" data-time="3000">方便你我 智享生活</h5>
-                <a href="##" class="btn js-animate animated"  data-animate="bounce" data-time="4000">立即使用摩室</a>
+                <p class="first-Ename js-animate animated" data-animate="fadeInDown" data-time="900">PORTABLE SMART TOILET</p>
+                <h5 class="first-tit js-animate animated"  data-animate="fadeInDown" data-time="1200">方便你我 智享生活</h5>
+                <a href="##" class="btn js-animate animated"  data-animate="fadeInDown" data-time="1500">立即使用摩室</a>
             </div>
             <div class="page page2">
-                <div class="js-animate animated second-img" data-animate="bounceIn" data-time="0">
+                <div class="js-animate animated second-img" data-animate="zoomIn" data-time="0">
                     <img src="images/banner/1.jpg" alt="">
                     <div class="second">
                         <h2>新闻标题</h2>
@@ -53,7 +53,7 @@
                         <p class="details">新闻内容新闻内容新闻内容</p>
                     </div>
                 </div>
-                <div class="js-animate animated second-img" data-animate="bounceIn" data-time="1500">
+                <div class="js-animate animated second-img" data-animate="zoomIn" data-time="300">
                     <img src="images/banner/2.jpg" alt="">
                     <div class="second">
                         <h2>新闻标题</h2>
@@ -61,7 +61,7 @@
                         <p class="details">新闻内容新闻内容新闻内容</p>
                     </div>
                 </div>
-                <div class="js-animate animated second-img" data-animate="bounceIn" data-time="3000">
+                <div class="js-animate animated second-img" data-animate="zoomIn" data-time="600">
                     <img src="images/banner/3.jpg" alt="">
                     <div class="second">
                         <h2>新闻标题</h2>
@@ -74,59 +74,59 @@
                 <div class="js-animate animated img-box text-center" data-animate="zoomIn" data-time="0">
                     <img src="images/img/phone.png" alt="" class="room-pig">
                 </div>
-                <div class="js-animate animated" data-animate="fadeInLeft" data-time="1500">
+                <div class="js-animate animated" data-animate="fadeInDown" data-time="300">
                     <p class="tit">更方便</p>
                 </div>
-                <h5 class="js-animate animated title" data-animate="fadeInRight" data-time="1500">
+                <h5 class="js-animate animated title" data-animate="fadeInDown" data-time="600">
                     为市民建设更加方便、美观、整洁的公共服务设施。
                 </h5>
-                <p class="js-animate animated" data-animate="fadeInLeft" data-time="1500">摩室移动智能卫生间为市民在城市公共区域提供7*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
+                <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室移动智能卫生间为市民在城市公共区域提供7*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
             </div>
             <div class="page page4 item">
-                <div class="js-animate animated four-img six text-center" data-animate="flipInY" data-time="0">
+                <div class="js-animate animated four-img six text-center" data-animate="zoomIn" data-time="0">
                     <img src="images/img/solar_energy.png" alt="" class="room-pig">
                 </div>
-                <div class="js-animate animated" data-animate="flipInX" data-time="800">
+                <div class="js-animate animated" data-animate="fadeInDown" data-time="300">
                     <p class="tit">更节能</p>
                 </div>
-                <h5 class="js-animate animated title" data-animate="flipInX" data-time="1600">
+                <h5 class="js-animate animated title" data-animate="fadeInDown" data-time="600">
                     为城市低碳环保节能减排助力，建设干净城市。
                 </h5>
-                <p class="js-animate animated" data-animate="flipInX" data-time="2400">摩室移动智能卫生间所有的设备都使用太阳能供电，我们希望建造一个更加低碳节能的城市公共服务设施。</p>
+                <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室移动智能卫生间所有的设备都使用太阳能供电，我们希望建造一个更加低碳节能的城市公共服务设施。</p>
             </div>
             <div class="page page5 item">
-                <div class="js-animate animated pay-img text-center" data-animate="rollIn" data-time="0">
+                <div class="js-animate animated pay-img text-center" data-animate="zoomIn" data-time="0">
                     <img src="images/img/machine.png" alt="" class="room-pig">
                 </div>
-                <div class="js-animate animated" data-animate="rollIn" data-time="1500">
+                <div class="js-animate animated" data-animate="fadeInDown" data-time="300">
                     <p class="tit">易购买</p>
                 </div>
-                <h5 class="js-animate animated title" data-animate="rotateInUpLeft" data-time="3000">
+                <h5 class="js-animate animated title" data-animate="fadeInDown" data-time="600">
                     为用户提供更多的应急用品，解决更多的紧急需求。
                 </h5>
-                <p class="js-animate animated" data-animate="fadeInLeft" data-time="4500">摩室移动智能卫生间的小型自动售卖机为用户提供了更加便捷的应急用品购买服务，例如：纸巾、湿巾、卫生巾、一次性雨衣等等。我们不仅仅解决你的一个问题，更想帮助你解决更多的应急需求。*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
+                <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室移动智能卫生间的小型自动售卖机为用户提供了更加便捷的应急用品购买服务，例如：纸巾、湿巾、卫生巾、一次性雨衣等等。我们不仅仅解决你的一个问题，更想帮助你解决更多的应急需求。*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
             </div>
             <div class="page page6 item">
-                <div class="js-animate animated four-img six text-center" data-animate="bounce" data-time="0">
+                <div class="js-animate animated four-img six text-center" data-animate="zoomIn" data-time="0">
                     <img src="images/img/loop.png" alt="" class="room-pig">
                 </div>
-                <div class="js-animate animated" data-animate="lightSpeedIn" data-time="1000">
+                <div class="js-animate animated" data-animate="fadeInDown" data-time="300">
                     <p class="tit">更环保</p>
                 </div>
-                <h5 class="js-animate animated title" data-animate="fadeInLeft" data-time="2000">
+                <h5 class="js-animate animated title" data-animate="fadeInDown" data-time="600">
                     为农业提供更多的有机肥料选择。
                 </h5>
-                <p class="js-animate animated" data-animate="lightSpeedIn" data-time="3000">摩室科技的目标不只是为大家提供一个方便干净的如厕地点，更致力于打造一个全新的排泄物资源使用闭环，做到真正的废物再利用。</p>
+                <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室科技的目标不只是为大家提供一个方便干净的如厕地点，更致力于打造一个全新的排泄物资源使用闭环，做到真正的废物再利用。</p>
             </div>
             <div class="page page7 text-center">
-                <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInUp" data-time="0" alt="">  
-                <div class="contact js-animate animated" data-animate="fadeInUp" data-time="600">
+                <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="">  
+                <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
                    <img src="images/img/wechat.png" alt="">  
                 </div>
-                <p class="phone js-animate animated" data-animate="fadeInUp" data-time="1200">4008-861-921</p>
-                <p class="word-times js-animate animated" data-animate="fadeInUp" data-time="1800">工作日 早10:00-晚8:00</p>
-                <p class="number js-animate animated" data-animate="fadeInUp" data-time="2400">京ICP备17063363号-1</p>
-                <p class="num2 js-animate animated" data-animate="fadeInUp" data-time="3000"> 北京摩室科技有限公司</p>
+                <p class="phone js-animate animated" data-animate="fadeInDown" data-time="600">4008-861-921</p>
+                <p class="word-times js-animate animated" data-animate="fadeInDown" data-time="900">工作日 早10:00-晚8:00</p>
+                <p class="number js-animate animated" data-animate="fadeInDown" data-time="1200">京ICP备17063363号-1</p>
+                <p class="num2 js-animate animated" data-animate="fadeInDown" data-time="1500"> 北京摩室科技有限公司</p>
             </div>
         </div>
     </div>
@@ -144,10 +144,15 @@
         $('.second-img').height(imgH);
         $(".nav-btn").click(function(event) {
             $(".nav-box").show();
-            
+            $.fn.fullpage.stop() 
         });
         $(".closed-btn").click(function(event) {
             $(".nav-box").hide();
+            $.fn.fullpage.start()
+        });
+        $(".nav-box a").click(function(event) {
+            $(".nav-box").hide();
+            $.fn.fullpage.start()
         });
         $('.wp-inner').fullpage({
             change: function (e) {
