--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page page3 item">
+            <div class="page page3 item text-center">
                 <div class="js-animate animated img-box text-center" data-animate="zoomIn" data-time="0">
                     <img src="images/img/phone.png" alt="" class="room-pig">
                 </div>
@@ -82,7 +82,7 @@
                 </h5>
                 <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室移动智能卫生间为市民在城市公共区域提供7*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
             </div>
-            <div class="page page4 item">
+            <div class="page page4 item text-center">
                 <div class="js-animate animated four-img six text-center" data-animate="zoomIn" data-time="0">
                     <img src="images/img/solar_energy.png" alt="" class="room-pig">
                 </div>
@@ -94,7 +94,7 @@
                 </h5>
                 <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室移动智能卫生间所有的设备都使用太阳能供电，我们希望建造一个更加低碳节能的城市公共服务设施。</p>
             </div>
-            <div class="page page5 item">
+            <div class="page page5 item text-center">
                 <div class="js-animate animated pay-img text-center" data-animate="zoomIn" data-time="0">
                     <img src="images/img/machine.png" alt="" class="room-pig">
                 </div>
@@ -106,8 +106,8 @@
                 </h5>
                 <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室移动智能卫生间的小型自动售卖机为用户提供了更加便捷的应急用品购买服务，例如：纸巾、湿巾、卫生巾、一次性雨衣等等。我们不仅仅解决你的一个问题，更想帮助你解决更多的应急需求。*24小时的公共卫生间服务，通过微信、支付宝和摩室APP可直接扫描摩室移动智能卫生间上的二维码进入使用。</p>
             </div>
-            <div class="page page6 item">
-                <div class="js-animate animated four-img six text-center" data-animate="zoomIn" data-time="0">
+            <div class="page page6 item text-center">
+                <div class="js-animate animated four-img six" data-animate="zoomIn" data-time="0">
                     <img src="images/img/loop.png" alt="" class="room-pig">
                 </div>
                 <div class="js-animate animated" data-animate="fadeInDown" data-time="300">
