--- a/moshroom-home-mobile/cooperation.html
+++ b/moshroom-home-mobile/cooperation.html
@@ -31,6 +31,9 @@
                 </ul>
             </div>
             <div class="page page1 text-center">
+                <div class="header">
+                    <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
+                </div>
                 <div class="new-padding">
                     <div class="item row f-t">
                       <div class="col-xs-12 col-sm-12 col-md-12">
