--- a/moshroom-home-mobile/cooperation.html
+++ b/moshroom-home-mobile/cooperation.html
@@ -30,30 +30,26 @@
                     <li><a href="#">广告合作</a></li>
                 </ul>
             </div>
-            <div class="page page1 text-center">
+            <div class="page page1 text-center" style="background-color: #000;">
                 <div class="header">
-                    
                     <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
                 </div>
-                <div class="new-padding">
-                    <div class="item row f-t">
-                      <div class="col-xs-12 col-sm-12 col-md-12">
-                        <div class="contact-box font-color Center">
-                          <div class="border-top"><div class="border-act"></div></div>
-                          <h2 class="e-words">CONTACT</h2>
-                          <h3 class="from-tit">商务合作</h3>
-                          <p class="cooper-con">摩室寻找更多的合作伙伴来共同打造更加环保、卫生的公共环境。</p>
-                          <form action="#" id="form-cooperation" method="POST" enctype="text/plain">
-                            <input type="text" class="form-control-text" name="contacts" id="contacts" placeholder="联系人" required="required">
-                            <input type="number" class="form-control-text" name="cellphone" id="cellphone" placeholder="电话" required="required">
-                            <input type="text" class="form-control-text" name="company" id="company" placeholder="公司" required="required">
-                            <input type="text" class="form-control-text" name="address" id="address" placeholder="地址" required="required">
-                            <textarea name="content" class="form-control-text" id="content" placeholder="合作事宜（20字以内简要说明）" rows="1"></textarea>
-                            <button type="button" id="submit-cooperation" class="btn btn-blue variable-width">提交</button>
-                          </form>
-                        </div>
-                      </div>
+                <div class="item">
+                    <div class="contact-box font-color Center">
+                      <div class="border-top"><div class="border-act"></div></div>
+                      <h2 class="e-words">CONTACT</h2>
+                      <h3 class="from-tit">商务合作</h3>
+                      <p class="cooper-con">摩室寻找更多的合作伙伴来共同打造更加环保、卫生的公共环境。</p>
+                      <form action="#" id="form-cooperation" method="POST" enctype="text/plain">
+                        <input type="text" class="form-control-text" name="contacts" id="contacts" placeholder="联系人" required="required">
+                        <input type="number" class="form-control-text" name="cellphone" id="cellphone" placeholder="电话" required="required">
+                        <input type="text" class="form-control-text" name="company" id="company" placeholder="公司" required="required">
+                        <input type="text" class="form-control-text" name="address" id="address" placeholder="地址" required="required">
+                        <textarea name="content" class="form-control-text" id="content" placeholder="合作事宜（20字以内简要说明）" rows="1"></textarea>
+                        <button type="button" id="submit-cooperation" class="btn btn-blue variable-width">提交</button>
+                      </form>
                     </div>
+                </div>
                 </div>
             </div>
             <div class="page page7 text-center">
