--- a/moshroom-home-mobile/cooperation.html
+++ b/moshroom-home-mobile/cooperation.html
@@ -34,7 +34,7 @@
                 <div class="header">
                     <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
                 </div>
-                <div class="item">
+                <div class="item-cooperation">
                     <div class="contact-box font-color Center">
                       <div class="border-top"><div class="border-act"></div></div>
                       <h2 class="e-words">CONTACT</h2>
