--- a/moshroom-home-mobile/cooperation.html
+++ b/moshroom-home-mobile/cooperation.html
@@ -30,7 +30,7 @@
                     <li><a href="#">广告合作</a></li>
                 </ul>
             </div>
-            <div class="page page1 text-center" style="background-color: #000;">
+            <div class="page page1 text-center">
                 <div class="header">
                     <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
                 </div>
