--- a/moshroom-home-mobile/about_us.html
+++ b/moshroom-home-mobile/about_us.html
@@ -34,15 +34,22 @@
                 <div class="header">
                     <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
                 </div>
-                <div class="js-animate animated first-img" data-animate="zoomIn" data-time="300">
-                    <img src="images/img/room.png" alt="" class="room-pig">
+                <div class="item-cooperation">
+                    <div class="contact-box font-color Center">
+                      <div class="border-top"><div class="border-act"></div></div>
+                      <h2 class="e-words">CONTACT</h2>
+                      <h3 class="from-tit">商务合作</h3>
+                      <p class="cooper-con">摩室寻找更多的合作伙伴来共同打造更加环保、卫生的公共环境。</p>
+                      <form action="#" id="form-cooperation" method="POST" enctype="text/plain">
+                        <input type="text" class="form-control-text" name="contacts" id="contacts" placeholder="联系人" required="required">
+                        <input type="number" class="form-control-text" name="cellphone" id="cellphone" placeholder="电话" required="required">
+                        <input type="text" class="form-control-text" name="company" id="company" placeholder="公司" required="required">
+                        <input type="text" class="form-control-text" name="address" id="address" placeholder="地址" required="required">
+                        <textarea name="content" class="form-control-text" id="content" placeholder="合作事宜（20字以内简要说明）" rows="1"></textarea>
+                        <button type="button" id="submit-cooperation" class="btn btn-blue variable-width">提交</button>
+                      </form>
+                    </div>
                 </div>
-                <div class="js-animate animated" data-animate="fadeInDown" data-time="600">
-                    <span class="first-name">摩室移动智能卫生间</span>
-                </div>
-                <p class="first-Ename js-animate animated" data-animate="fadeInDown" data-time="900">PORTABLE SMART TOILET</p>
-                <h5 class="first-tit js-animate animated"  data-animate="fadeInDown" data-time="1200">方便你我 智享生活</h5>
-                <a href="##" class="btn js-animate animated"  data-animate="fadeInDown" data-time="1500">立即使用摩室</a>
             </div>
             <div class="page page2">
                 <div class="js-animate animated second-img" data-animate="zoomIn" data-time="0">
