--- a/moshroom-home-mobile/cooperation.html
+++ b/moshroom-home-mobile/cooperation.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page page2 text-center">
+            <div class="page page2 text-center" style="background-color: #116ad9;">
                 <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="">  
                 <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
                    <img src="images/img/wechat.png" alt="">  
