--- a/moshroom-home-mobile/home_page.html
+++ b/moshroom-home-mobile/home_page.html
@@ -118,7 +118,7 @@
                 </h5>
                 <p class="js-animate animated" data-animate="fadeInDown" data-time="900">摩室科技的目标不只是为大家提供一个方便干净的如厕地点，更致力于打造一个全新的排泄物资源使用闭环，做到真正的废物再利用。</p>
             </div>
-            <div class="page page7 text-center">
+            <div class="page page7 text-center footer-con">
                 <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="">  
                 <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
                    <img src="images/img/wechat.png" alt="">  
