--- a/moshroom-home-mobile/about_us.html
+++ b/moshroom-home-mobile/about_us.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            <div class="page page2">
+            <div class="page page2 footer-con">
                 <div class="js-animate animated second-img" data-animate="zoomIn" data-time="0">
                     <img src="images/banner/1.jpg" alt="">
                     <div class="second">
