--- a/moshroom-home-mobile/about_us.html
+++ b/moshroom-home-mobile/about_us.html
@@ -10,16 +10,22 @@
     <link rel="stylesheet" href="css/zepto.fullpage.css">
     <link rel="stylesheet" href="css/animate.css">
 </head>
-<body>
-    <div class="wp">
-        <div class="wp-inner">
-            <div class="nav">
-                <button type="button" class="navbar-toggle nav-btn" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>    
-                </button>
+<body style="background-color: #116ad9;">
+    <div class="">
+        <div class="-wp-inner">
+            <div class="header-con">
+                <div class="header">
+                    <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
+                </div>
+                <div class="nav">
+                    <button type="button" class="navbar-toggle nav-btn" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>    
+                    </button>
+                </div>
             </div>
+                
             <div class="nav-box">
                 <i class="closed-btn">x</i>
                 <ul class="navbar-nav navbar-right" style="">
@@ -30,62 +36,24 @@
                     <li><a href="#">广告合作</a></li>
                 </ul>
             </div>
-            <div class="page page1 text-center">
-                <div class="header">
-                    <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
-                </div>
-                <div class="item-cooperation">
-                    <div class="contact-box font-color Center">
-                      <div class="border-top"><div class="border-act"></div></div>
-                      <h2 class="e-words">CONTACT</h2>
-                      <h3 class="from-tit">商务合作</h3>
-                      <p class="cooper-con">摩室寻找更多的合作伙伴来共同打造更加环保、卫生的公共环境。</p>
-                      <form action="#" id="form-cooperation" method="POST" enctype="text/plain">
-                        <input type="text" class="form-control-text" name="contacts" id="contacts" placeholder="联系人" required="required">
-                        <input type="number" class="form-control-text" name="cellphone" id="cellphone" placeholder="电话" required="required">
-                        <input type="text" class="form-control-text" name="company" id="company" placeholder="公司" required="required">
-                        <input type="text" class="form-control-text" name="address" id="address" placeholder="地址" required="required">
-                        <textarea name="content" class="form-control-text" id="content" placeholder="合作事宜（20字以内简要说明）" rows="1"></textarea>
-                        <button type="button" id="submit-cooperation" class="btn btn-blue variable-width">提交</button>
-                      </form>
+            <div class="about-us">
+                <h2>关于摩室科技</h2>
+                <img src="images/banner/3.jpg" alt="" class="img-banner">
+                <p>智能家居一直是一个很火的话题，有些人可能了解过智能家居，有些人可能只是听过这个名字而已。现如今物联网兴起，万物都被接入了互联网，冰箱、洗衣机、电视、甚至是花盆，渐渐的智能家居也走入了我们的身边。</p>
+                <p>相信大家对智能家居的了解大多是来自于像小米、阿里、博联等这样的互联网企业。其实智能家居最早起源于上个世纪末的美国，像国际上比较有名的智能家居品牌，比如：美系的快思聪、Control4、AMX，欧系的KNX系统，美系品牌最早用于多媒体影音控制，而欧系KNX系统最早应用于楼宇智能化，更加偏重于机电控制。不同于我们现在看到的小米智能家居单品那样，上面说到的欧美系智能家居产品都需要在装修前期进行方案制定、综合布线规划，这些设备通过专用的通讯总线连接起来，形成一个整体。然后工程师进行设备安装、逻辑编程、交互界面制作、调试等工作，最终形成一整套稳定高效的智能家居系统。</p>
+                <p>而国内这些互联网公司做的智能家居，其实只能说是智能单品，通过使用同一个品牌的不同智能单品，然后再APP端进行设置组网等，形成一个联动系统，基本上熟悉手机操作的同学都可以搞定。</p>
+                <p>13年注册的尾巴账号，这个是第一个帖子，13年接触智能家居并从业到现在，大家对智能家居有什么想法，有什么想了解的，都可以回复，我会给大家一一解答。</p>
+
+                <div class="footer" style="display: none;">
+                    <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="">  
+                    <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
+                       <img src="images/img/wechat.png" alt="">  
                     </div>
+                    <p class="phone js-animate animated" data-animate="fadeInDown" data-time="600">4008-861-921</p>
+                    <p class="word-times js-animate animated" data-animate="fadeInDown" data-time="900">工作日 早10:00-晚8:00</p>
+                    <p class="number js-animate animated" data-animate="fadeInDown" data-time="1200">京ICP备17063363号-1</p>
+                    <p class="num2 js-animate animated" data-animate="fadeInDown" data-time="1500"> 北京摩室科技有限公司</p>
                 </div>
-            </div>
-            <div class="page page2 footer-con">
-                <div class="js-animate animated second-img" data-animate="zoomIn" data-time="0">
-                    <img src="images/banner/1.jpg" alt="">
-                    <div class="second">
-                        <h2>新闻标题</h2>
-                        <p class="times">20180901</p>
-                        <p class="details">新闻内容新闻内容新闻内容</p>
-                    </div>
-                </div>
-                <div class="js-animate animated second-img" data-animate="zoomIn" data-time="300">
-                    <img src="images/banner/2.jpg" alt="">
-                    <div class="second">
-                        <h2>新闻标题</h2>
-                        <p class="times">20180901</p>
-                        <p class="details">新闻内容新闻内容新闻内容</p>
-                    </div>
-                </div>
-                <div class="js-animate animated second-img" data-animate="zoomIn" data-time="600">
-                    <img src="images/banner/3.jpg" alt="">
-                    <div class="second">
-                        <h2>新闻标题</h2>
-                        <p class="times">20180901</p>
-                        <p class="details">新闻内容新闻内容新闻内容</p>
-                    </div>
-                </div>
-            </div>
-            <div class="page page7 text-center">
-                <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="">  
-                <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
-                   <img src="images/img/wechat.png" alt="">  
-                </div>
-                <p class="phone js-animate animated" data-animate="fadeInDown" data-time="600">4008-861-921</p>
-                <p class="word-times js-animate animated" data-animate="fadeInDown" data-time="900">工作日 早10:00-晚8:00</p>
-                <p class="number js-animate animated" data-animate="fadeInDown" data-time="1200">京ICP备17063363号-1</p>
-                <p class="num2 js-animate animated" data-animate="fadeInDown" data-time="1500"> 北京摩室科技有限公司</p>
             </div>
         </div>
     </div>
