--- a/moshroom-home-mobile/cooperation.html
+++ b/moshroom-home-mobile/cooperation.html
@@ -32,10 +32,10 @@
             </div>
             <div class="page page1 text-center">
                 <div class="header">
-                    <img src="images/img/new_logo.png" class="logo js-animate animated" data-animate="zoomIn" data-time="0">
+                    <img src="images/img/new_logo.png" class="logo">
                 </div>
-                <div class="item-cooperation">
-                    <div class="contact-box font-color Center">
+                <div class="item-cooperation display-flex js-animate animated" data-animate="zoomIn" data-time="0">
+                    <div class="contact-box font-color Center flex-con">
                       <div class="border-top"><div class="border-act"></div></div>
                       <h2 class="e-words">CONTACT</h2>
                       <h3 class="from-tit">商务合作</h3>
@@ -49,17 +49,22 @@
                         <button type="button" id="submit-cooperation" class="btn btn-blue variable-width">提交</button>
                       </form>
                     </div>
+                            
                 </div>
             </div>
             <div class="page page2 text-center footer-con" style="background-color: #116ad9;">
-                <img src="images/img/sina.png" class="icon-top js-animate" data-animate="fadeInDown" data-time="0" alt="">  
-                <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
-                   <img src="images/img/wechat.png" alt="">  
-                </div>
-                <p class="phone js-animate animated" data-animate="fadeInDown" data-time="600">4008-861-921</p>
-                <p class="word-times js-animate animated" data-animate="fadeInDown" data-time="900">工作日 早10:00-晚8:00</p>
-                <p class="number js-animate animated" data-animate="fadeInDown" data-time="1200">京ICP备17063363号-1</p>
-                <p class="num2 js-animate animated" data-animate="fadeInDown" data-time="1500"> 北京摩室科技有限公司</p>
+                <div class="display-flex">
+                    <div class="flex-con" style="height: 9rem;">
+                        <img src="images/img/sina.png" class="js-animate" data-animate="fadeInDown" data-time="0" alt="">  
+                        <div class="contact js-animate animated" data-animate="fadeInDown" data-time="300">
+                           <img src="images/img/wechat.png" alt="">  
+                        </div>
+                        <p class="phone js-animate animated" data-animate="fadeInDown" data-time="600">4008-861-921</p>
+                        <p class="word-times js-animate animated" data-animate="fadeInDown" data-time="900">工作日 早10:00-晚8:00</p>
+                        <p class="number js-animate animated" data-animate="fadeInDown" data-time="1200">京ICP备17063363号-1</p>
+                        <p class="num2 js-animate animated" data-animate="fadeInDown" data-time="1500"> 北京摩室科技有限公司</p>
+                    </div>
+                </div>  
             </div>
         </div>
     </div>
